<resources>
    <string name="app_name">Quadratic App</string>
    <string name="aLabel">Input A: </string>
    <string name="bLabel">Input B: </string>
    <string name="cLabel">Input C: </string>
    <string name="previewText">Ax^2 + Bx + C</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="defaultDecimal">0 , 0</string>
    <string name="aIsZerodDialogeMessage">Having A equal to 0 is an invalid quadratic equation.</string>
    <string name="blankFieldsDialogeMessage">Please do not leave any of the numbers blank.</string>
    <string name="invalidInput">Invalid Input</string>
    <string name="ok">OK</string>
</resources>
