<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lunarempire.quadraticapp.QuadraticActivity"
    android:orientation="vertical">

    <!--This is the linear layout for A-->
    <LinearLayout
        android:id="@+id/linLayA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aLabel"
            />

        <EditText
            android:id="@+id/editA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

    <!--This is the linear layout for B-->
    <LinearLayout
        android:id="@+id/linLayB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bLabel"
            />

        <EditText
            android:id="@+id/editB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

    <!--This is the linear layout for C-->
    <LinearLayout
        android:id="@+id/linLayC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cLabel"
            />

        <EditText
            android:id="@+id/editC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

    <!-- Do the Preview TODO: Change Background Color-->
     <WebView
        android:id="@+id/previewFormulaPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:scrollbars="none" />

    <!-- Do the Button -->

    <!--Make sure you bind this to a function TODO: Add top padding-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_gravity="center"/>

    <!-- Do the Roots TODO: Change Background Color-->
     <WebView
        android:id="@+id/rootsFormulaPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:scrollbars="none" />
    <!-- Clear Button -->
    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:onClick="onClickClear"/>

    <!-- Do the Ad -->
</LinearLayout>
